--- a/src/app/layout/skeleton/skeleton.component.html
+++ b/src/app/layout/skeleton/skeleton.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" [href]="sanitizer.bypassSecurityTrustResourceUrl(cssUrl)">
 <app-navigation></app-navigation>
-<div style="border: 2px solid palevioletred;">
+<div>
     <router-outlet></router-outlet>
 </div>
 <!-- <app-footer></app-footer> -->
