--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -450,7 +450,7 @@
 
                                     <!-- Main start -->
                                     <div class="xh8yej3 x1gryazu x10o80wk x14k21rp x1porb0y x17snn68 x6osk4m">
-                                        Main
+                                        <router-outlet></router-outlet>
                                     </div>
                                     <!-- / Main end -->
                                 </div>
