--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -16,7 +16,7 @@
                                     >
                                         <div class="x1uvtmcs x4k7w5x x1h91t0o x1beo9mf xaigb6o x12ejxvf x3igimt xarpa2k xedcshv x1lytzrv x1t2pt76 x7ja8zs x1n2onr6 x1qrby5j x1jfb8zj">
                                             <div class="x78zum5 x1q0g3np x1gvbg2u x1qughib xleuxlb xxfw5ft x1mh60rb x1f91t4q x1n2onr6">
-                                                <div class="xvb8j5 x1vjfegm" style="transform: translateX(0);" id="ixvb8j5">
+                                                <div #asIxvb8j5 class="xvb8j5 x1vjfegm" style="transform: translateX(0);" id="ixvb8j5">
                                                     <div class="x1cy8zhl x9f619 x78zum5 xdt5ytf x1gvbg2u x1y1aw1k xn6708d xx6bls6 x1ye3gou xvbhtw8 x1xgvd2v x1o5hw5a xaeubzz" id="ix1cy8zhl" style="transform: translateX(0px);">
                                                         <div class="x2lah0s x1n2onr6 x1to3lk4 xh8yej3" id="ix2lah0s">
                                                             <div class="x9tmck8 xn6708d x1l90r2v x1ye3gou x1r3wxaz xh8yej3 x9f619 x10l6tqk x13vifvy x17qophe xxz18i5">
