--- a/src/app/layout/skeleton/skeleton.component.html
+++ b/src/app/layout/skeleton/skeleton.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" [href]="sanitizer.bypassSecurityTrustResourceUrl(cssUrl)">
-<app-navigation></app-navigation>
+<!-- <app-navigation></app-navigation> -->
 <div>
     <router-outlet></router-outlet>
 </div>
