--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -17,8 +17,8 @@
                                         <div class="x1uvtmcs x4k7w5x x1h91t0o x1beo9mf xaigb6o x12ejxvf x3igimt xarpa2k xedcshv x1lytzrv x1t2pt76 x7ja8zs x1n2onr6 x1qrby5j x1jfb8zj">
                                             <div class="x78zum5 x1q0g3np x1gvbg2u x1qughib xleuxlb xxfw5ft x1mh60rb x1f91t4q x1n2onr6">
                                                 <div #asIxvb8j5 class="xvb8j5 x1vjfegm" style="transform: translateX(0);" id="ixvb8j5">
-                                                    <div class="x1cy8zhl x9f619 x78zum5 xdt5ytf x1gvbg2u x1y1aw1k xn6708d xx6bls6 x1ye3gou xvbhtw8 x1xgvd2v x1o5hw5a xaeubzz" id="ix1cy8zhl" style="transform: translateX(0px);">
-                                                        <div class="x2lah0s x1n2onr6 x1to3lk4 xh8yej3" id="ix2lah0s">
+                                                    <div #asIx1cy8zhl class="x1cy8zhl x9f619 x78zum5 xdt5ytf x1gvbg2u x1y1aw1k xn6708d xx6bls6 x1ye3gou xvbhtw8 x1xgvd2v x1o5hw5a xaeubzz" id="ix1cy8zhl" style="transform: translateX(0px);">
+                                                        <div class="x2lah0s x1n2onr6 x1to3lk4 xh8yej3" #asIx2lah0s id="ix2lah0s">
                                                             <div class="x9tmck8 xn6708d x1l90r2v x1ye3gou x1r3wxaz xh8yej3 x9f619 x10l6tqk x13vifvy x17qophe xxz18i5">
                                                                 <div style="opacity: 1;">
                                                                     <a
@@ -39,7 +39,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="xh8yej3 x1iyjqo2" id="ixh8yej3">
+                                                        <div class="xh8yej3 x1iyjqo2" #asIxh8yej3 id="ixh8yej3">
                                                             <div id="001">
                                                                 <div class="x1n2onr6">
                                                                     <div class="x1n2onr6">
@@ -73,7 +73,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div id="002">
+                                                            <div id="002" #as002>
                                                                 <div class="x1n2onr6">
                                                                     <a
                                                                         [routerLink]="['search']"
@@ -120,7 +120,7 @@
                                                                     </a>
                                                                 </div>
                                                             </div>
-                                                            <div id="003">
+                                                            <div id="003" #as003>
                                                                 <div class="x1n2onr6">
                                                                     <a
                                                                         href=""
@@ -276,7 +276,7 @@
                                                                     </a>
                                                                 </div>
                                                             </div>
-                                                            <div id="006">
+                                                            <div id="006" #as006>
                                                                 <div class="x1n2onr6">
                                                                     <a
                                                                         href=""
@@ -307,7 +307,7 @@
                                                                     </a>
                                                                 </div>
                                                             </div>
-                                                            <div id="007">
+                                                            <div id="007" #as007>
                                                                 <div class="x1n2onr6">
                                                                     <a
                                                                         href=""
@@ -413,7 +413,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <div class="xl5mz7h xhuyl8g" id="ixl5mz7h">
+                                                        <div class="xl5mz7h xhuyl8g" #asIxl5mz7h id="ixl5mz7h">
                                                             <div class="x1n2onr6">
                                                                 <a
                                                                     href=""
