--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -1,5 +1,4 @@
 <!-- <link rel="stylesheet" [href]="sanitizer.bypassSecurityTrustResourceUrl(cssUrl)"> -->
-
 <div id="mount_0_0_9V">
     <div>
         <div>
@@ -449,11 +448,11 @@
                                     </div>
                                     <!-- / Nav end -->
 
-                                    <!-- Main start -->
+                                    <!-- Main feed start -->
                                     <div class="xh8yej3 x1gryazu x10o80wk x14k21rp x1porb0y x17snn68 x6osk4m">
                                         <router-outlet></router-outlet>
                                     </div>
-                                    <!-- / Main end -->
+                                    <!-- / Main feed end -->
                                 </div>
                             </div>
                         </div>
