--- a/src/app/modules/usecases/components/feed/feed.component.html
+++ b/src/app/modules/usecases/components/feed/feed.component.html
@@ -8,7 +8,7 @@
                     <!-- *** -->
 
                     <!-- === Feed Start === -->
-                        <div class="_aam1 _akej _akmr">
+                        <div class="_aam1 _akej _akmr" #asFeed>
                             <div class="_ab6o _ab6q"></div>
                             <!-- Stories start -->
                                 <app-stories></app-stories>        
