Add && remove barra lateral de búsqueda

--- a/src/styles.css
+++ b/src/styles.css
@@ -2599,3 +2599,46 @@ a._aaqk:visited {
     justify-content: center;
     padding-right: 4px;
 }
+
+
+/*  */
+
+.x1u3tz30 {
+    left: 73px;
+}
+.xzmilaz {
+    box-shadow: 4px 0 24px rgba(var(--web-always-black),.15);
+}
+.xoqspk4 {
+    border-top-right-radius: 16px;
+}
+.xish69e {
+    overscroll-behavior: contain;
+}
+.x1zvrr1 {
+    width: 397px;
+}
+
+.x1odjw0f {
+    overflow-y: auto;
+}
+.x12v9rci {
+    border-bottom-right-radius: 16px;
+}
+
+.xq1608w {
+    padding-bottom: 36px;
+}
+
+.xmns6w2 {
+    padding-right: 14px;
+}
+.xbbxn1n {
+    padding-left: 24px;
+}
+.x1yc453h {
+    text-align: left;
+}
+.x133cpev {
+    font-size: var(--system-24-font-size);
+}
