--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -14,8 +14,9 @@
                                         id="ix9f619"
                                     >
                                         <div class="x1uvtmcs x4k7w5x x1h91t0o x1beo9mf xaigb6o x12ejxvf x3igimt xarpa2k xedcshv x1lytzrv x1t2pt76 x7ja8zs x1n2onr6 x1qrby5j x1jfb8zj">
-                                            <div class="x78zum5 x1q0g3np x1gvbg2u x1qughib xleuxlb xxfw5ft x1mh60rb x1f91t4q x1n2onr6">
-                                                <div #asIxvb8j5 class="xvb8j5 x1vjfegm" style="transform: translateX(0);" id="ixvb8j5">
+                                            <div class="x78zum5 x1q0g3np x1gvbg2u x1qughib xleuxlb xxfw5ft x1mh60rb x1f91t4q x1n2onr6" #asParentSearch>
+                                                <div class="xvb8j5 x1vjfegm" style="transform: translateX(0px);" id="ixvb8j5" #asIxvb8j5>
+                                                    <!-- [ngStyle]="{'color':'red', 'font-weight':'bold'}" -->
                                                     <div #asIx1cy8zhl class="x1cy8zhl x9f619 x78zum5 xdt5ytf x1gvbg2u x1y1aw1k xn6708d xx6bls6 x1ye3gou xvbhtw8 x1xgvd2v x1o5hw5a xaeubzz" id="ix1cy8zhl" style="transform: translateX(0px);">
                                                         <div class="x2lah0s x1n2onr6 x1to3lk4 xh8yej3" #asIx2lah0s id="ix2lah0s">
                                                             <div class="x9tmck8 xn6708d x1l90r2v x1ye3gou x1r3wxaz xh8yej3 x9f619 x10l6tqk x13vifvy x17qophe xxz18i5">
@@ -72,10 +73,9 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div id="002" #as002>
+                                                            <div id="002" #as002 (click)="addOrRemoveSideSearchWindow()">
                                                                 <div class="x1n2onr6">
                                                                     <a
-                                                                        [routerLink]="['search']"
                                                                         class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
                                                                     >
                                                                         <div
@@ -443,13 +443,32 @@
                                                         </div>
                                                     </div>
                                                 </div>
+
+                                                <!-- Barra lateral de búsqueda -->
+                                                <div class="x10l6tqk x1u3tz30 x1ja2u2z" style="transform: translateX(0%);" #asSideSearch>
+                                                    <div class="xvbhtw8 xvb8j5 x9f619 x78zum5 xdt5ytf x1dr59a3 x1odjw0f xish69e x1y1aw1k x4uap5 xwib8y2 xkhd6sd xzmilaz x168nmei xoqspk4 x12v9rci xo71vjh x1n2onr6 x1zvrr1">
+                                                        <div class="xh8yej3 x5yr21d x78zum5 xdt5ytf x10wlt62" style="opacity: 1;">
+                                                            
+                                                            <div class="x1xmf6yo x11i5rnm x1e56ztr x1mh8g0r xz9dl7a xmns6w2 xq1608w xbbxn1n">
+                                                                <div>
+                                                                    <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye x133cpev x1s688f x5n08af x1yc453h x4zkp8e x41vudc x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:30px;">
+                                                                        Búsqueda
+                                                                    </span>
+                                                                </div>
+                                                            </div>
+                                                            
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- / Barra lateral de búesqueda end   -->
+
                                             </div>
                                         </div>
                                     </div>
                                     <!-- / Nav end -->
 
                                     <!-- Main feed start -->
-                                    <div class="xh8yej3 x1gryazu x10o80wk x14k21rp x1porb0y x17snn68 x6osk4m">
+                                    <div class="xh8yej3 x1gryazu x10o80wk x14k21rp x1porb0y x17snn68 x6osk4m" #asParentMain>
                                         <router-outlet></router-outlet>
                                     </div>
                                     <!-- / Main feed end -->
