--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -16,7 +16,6 @@
                                         <div class="x1uvtmcs x4k7w5x x1h91t0o x1beo9mf xaigb6o x12ejxvf x3igimt xarpa2k xedcshv x1lytzrv x1t2pt76 x7ja8zs x1n2onr6 x1qrby5j x1jfb8zj">
                                             <div class="x78zum5 x1q0g3np x1gvbg2u x1qughib xleuxlb xxfw5ft x1mh60rb x1f91t4q x1n2onr6" #asParentSearch>
                                                 <div class="xvb8j5 x1vjfegm" style="transform: translateX(0px);" id="ixvb8j5" #asIxvb8j5>
-                                                    <!-- [ngStyle]="{'color':'red', 'font-weight':'bold'}" -->
                                                     <div #asIx1cy8zhl class="x1cy8zhl x9f619 x78zum5 xdt5ytf x1gvbg2u x1y1aw1k xn6708d xx6bls6 x1ye3gou xvbhtw8 x1xgvd2v x1o5hw5a xaeubzz" id="ix1cy8zhl" style="transform: translateX(0px);">
                                                         <div class="x2lah0s x1n2onr6 x1to3lk4 xh8yej3" #asIx2lah0s id="ix2lah0s">
                                                             <div class="x9tmck8 xn6708d x1l90r2v x1ye3gou x1r3wxaz xh8yej3 x9f619 x10l6tqk x13vifvy x17qophe xxz18i5">
@@ -445,7 +444,10 @@
                                                 </div>
 
                                                 <!-- Barra lateral de búsqueda -->
-                                                <div class="x10l6tqk x1u3tz30 x1ja2u2z" style="transform: translateX(0%);" #asSideSearch>
+                                                <!-- [ngStyle]="{'color':'red', 'font-weight':'bold'}" -->
+                                                <!-- <div class="x10l6tqk x1u3tz30 x1ja2u2z" style="transform: translateX(0%); transition: color 0.8s linear 0.2s;" #asSideSearch> -->
+                                                <div class="x10l6tqk x1u3tz30 x1ja2u2z" #asSideSearch>
+                                                    <!-- <div class="x10l6tqk x1u3tz30 x1ja2u2z" [ngStyle]="{'transform': 'translateX(' + this.count + '%)'}" #asSideSearch> -->
                                                     <div class="xvbhtw8 xvb8j5 x9f619 x78zum5 xdt5ytf x1dr59a3 x1odjw0f xish69e x1y1aw1k x4uap5 xwib8y2 xkhd6sd xzmilaz x168nmei xoqspk4 x12v9rci xo71vjh x1n2onr6 x1zvrr1">
                                                         <div class="xh8yej3 x5yr21d x78zum5 xdt5ytf x10wlt62" style="opacity: 1;">
                                                             
