--- a/src/styles.css
+++ b/src/styles.css
@@ -2642,3 +2642,122 @@ a._aaqk:visited {
 .x133cpev {
     font-size: var(--system-24-font-size);
 }
+.xm80bdy {
+    margin-right: -9999px;
+}
+.xedcshv {
+    max-height: inherit;
+}
+.x91k8ka {
+    margin-bottom: 22px;
+}
+.x1anpbxc {
+    margin-top: 10px;
+}
+
+/* Show more */
+.xgf5ljw {
+    background-color: rgb(var(--ig-banner-background));
+}
+.xfh8nwu {
+    border-top-left-radius: 16px;
+}
+.x13b9bq5 {
+    filter: drop-shadow(0 4px 12px rgba(var(--web-always-black),.15));
+}
+.x138vmkv {
+    border-bottom-left-radius: 16px;
+}
+.xq9evs9 {
+    width: 266px;
+}
+.x71s49j {
+    pointer-events: all;
+}
+.x6o7n8i {
+    transition-property: opacity,transform;
+}
+.x1qfuztq {
+    transition-timing-function: var(--fds-soft);
+}
+.x1k90msu {
+    transition-duration: var(--fds-fast);
+}
+.x1sxyh0 {
+    padding-right: 8px;
+}
+.xiojian {
+    border-bottom-right-radius: unset;
+}
+.x1yutycm {
+    border-bottom-left-radius: unset;
+}
+.xyamay9 {
+    padding-top: 16px;
+}
+.xp7jhwk {
+    margin-left: -8px;
+}
+.xols6we {
+    height: 6px;
+}
+.x1pylafk {
+    background-color: rgba(var(--ig-stroke),.3);
+}
+.x1n0m28w {
+    margin-right: -8px;
+}
+.x28ko6u {
+    height: 0.5px;
+}
+.x1y3jaa6 {
+    background-color: rgba(var(--ig-stroke),.5);
+}
+.x17adc0v {
+    margin-left: 10px;
+}
+.x11f4b5y {
+    left: 20px;
+}
+.xqd3l62 {
+    bottom: -10px;
+}
+.xfp8t6d {
+    clip-path: path('M8 0C8 4 9.32406e-08 7.819 1.25211e-07 10.5C1.57188e-07 13.1815 8 17.0005 8 21L8 0Z');
+}
+.xdlhfag {
+    left: calc(50% - 8px);
+}
+.x1rbgqaq {
+    transform: rotate(270deg);
+}
+.x1qx5ct2 {
+    height: 20px;
+}
+.x1a00udw {
+    width: 15px;
+}
+.xks8skl {
+    background-color: rgba(var(--ig-hover-overlay));
+}
+.xg01cxk {
+    opacity: 0;
+}
+.x3x9cwd {
+    border-top-right-radius: inherit;
+}
+.x1o1ewxj {
+    border-top-left-radius: inherit;
+}
+.x1e5q0jg {
+    border-bottom-right-radius: inherit;
+}
+.x1dhq9h {
+    transition-timing-function: var(--fds-animation-fade-out);
+}
+.x19991ni {
+    transition-property: opacity;
+}
+.x13rtm0m {
+    border-bottom-left-radius: inherit;
+}
