--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -476,7 +476,8 @@
                             <div #asMorenav>
                                 <div>
                                     <div>
-                                        <div class="xu96u03 xm80bdy x10l6tqk x13vifvy" style="position: fixed; transform: translate(13px, 805px) translate(0px, -100%);">
+                                        <!-- <div class="xu96u03 xm80bdy x10l6tqk x13vifvy" #asMoreBoddy style="position: fixed; transform: translate(13px, 805px) translate(0px, -100%);"> -->
+                                        <div class="xu96u03 xm80bdy x10l6tqk x13vifvy" #asMoreBoddy style="position: fixed; transform: translate(13px, 805px) translate(0px, -100%);">
                                             <app-morenav></app-morenav>
                                         </div>
                                     </div>
