--- a/src/styles.css
+++ b/src/styles.css
@@ -2761,7 +2761,18 @@ a._aaqk:visited {
 .x13rtm0m {
     border-bottom-left-radius: inherit;
 }
-
 .x11x68ut {
     margin-left: 15.5px;
+}
+.xyorhqc {
+    margin-bottom: 10px;
+}
+.xmbx2d0 {
+    bottom: 14px;
+}
+.xr6gfmr {
+    left: 8px;
+}
+.x1cu5jd9 {
+    bottom: calc(50% - 8px);
 }
